final updates v1
